# htmx-todo

./: Cargo.toml  Dockerfile  README.md  fly.toml
.devcontainer/: .env  Dockerfile  devcontainer.json
.sqlx/: query-032256df15e2e3a796c619e2fbbc4f434f367c2bf5a4a5d7babbed5646e05096.json  query-05e9845145e191cde2cb309daff1d5fcfd58d918d68e46046ae61fcfe253ce84.json  query-6656d23e10556c006ede03e1d4aab18cf1e136c7cea15c2c4a6ea11ac3ae2d98.json  query-a19052d72f7385dd433676d7b2853d5a40471e936282ebebd772aafd0d809011.json  query-bbe7f3f32c90b804d343966dc92e6a02da3bed8827a6b5f70ca8e0f02bf5081b.json
assets/: site.css
migrations/: 20240716160842_todos.sql
src/: main.rs  todo.rs
templates/: _layout.html  todos.html
